# hpc-datastore-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.cache/clangd/index/: hpc_ds_api.hpp.32F87288A976D7BE.idx  hpc_ds_details.hpp.0538828C458B64CC.idx  hpc_ds_structs.hpp.82FC72AEFF7777D3.idx  main.cpp.FA586B1CBB67A868.idx
docs/: Doxyfile
python_binding/source_code/: CMakeLists.txt  vcpkg.json
python_binding/source_code/src/: custom_casters.hpp  main.cpp
samples/: CMakeLists.txt  common.hpp
samples/ds_properties/: CMakeLists.txt  main.cpp
samples/read_block/: CMakeLists.txt  main.cpp
samples/read_image/: CMakeLists.txt  main.cpp
samples/write_block/: CMakeLists.txt  main.cpp
samples/write_image/: CMakeLists.txt  main.cpp
src/: .hpc_ds_structs.hpp.swp  hpc_ds_api.hpp  hpc_ds_details.hpp  hpc_ds_structs.hpp  main.cpp
static_i3dlib/includes/i3d/: RegistrationKuhnMunkres.h  bilateral.h  filters.h  rankFilterByHistogram.h  thinning.h  threshold.h  toolbox.h
static_i3dlib/includes/i3d/descriptors/: gabor.h  haralick.h  lbptop.h  mpeg7ehd.h  tamura.h  vlbp.h
static_i3dlib/libs/: cbia.lib.i3dalgo.dyn.rel.x64.16.lib  cbia.lib.i3dcore.dyn.rel.x64.16.lib
tests/: common.hpp
tests/speeds/: CMakeLists.txt  read_blocks.cpp  read_image.cpp  write_blocks.cpp  write_image.cpp
tests/static/: CMakeLists.txt  vcpkg.json
tests/static/includes/i3d/: EllipseFitting.h  FastLevelSet.h  Registration.h  RegistrationPointBased.h  i3dassert.h  image3d.h  metrics.h  morphology.h  regions.h  segment_nuclei.h
tests/static/includes/i3d/descriptors/: lbp.h  lbpplaton.h  moments.h  rsurf.h  rsurfslopesdivider.h
tests/units/: CMakeLists.txt  block.hpp  blocks.hpp  image.hpp  main.cpp  read_block.hpp  region.hpp
